fix scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,7 +13,7 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -23,6 +23,5 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-  border: 1px solid $primary;
-  border-radius: 10px;
+  background: $jet;
 }
